Fixed faulty blurring effect.

--- a/SuperUrlBar/SuperUrlBar.css
+++ b/SuperUrlBar/SuperUrlBar.css
@@ -80,10 +80,10 @@
     pointer-events: none;
   
     width: 200vw;
-    height: 100vh;
+    height: 200vh;
   
-    top: 0px;
-    left: -50px;
+    top: -100vh;
+    left: -100vw;
   
     background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(var(--blur-intensity));
